[gd_scene load_steps=6 format=3 uid="uid://685aitiup4lg"]

[ext_resource type="Script" uid="uid://bwb5b7xflp86d" path="res://GUI/Menus/game_over.gd" id="1_4ylr2"]
[ext_resource type="Texture2D" uid="uid://xpwecjj4xyjd" path="res://GUI/Menus/GameHoverBackGround.png" id="2_dwahu"]
[ext_resource type="Texture2D" uid="uid://bgii4427esurb" path="res://GUI/Menus/GAME OVER.svg" id="3_4ylr2"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4ylr2"]
texture = ExtResource("2_dwahu")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_humoe"]
texture = ExtResource("3_4ylr2")

[node name="GameOver" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4ylr2")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ActionSound" type="AudioStreamPlayer" parent="."]

[node name="BackGround" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_4ylr2")

[node name="Panel2" type="Panel" parent="."]
custom_minimum_size = Vector2(1200, 250)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -350.0
offset_top = 389.0
offset_right = 350.0
offset_bottom = 639.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_humoe")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.456
anchor_top = 0.749
anchor_right = 0.544
anchor_bottom = 0.834
offset_left = 29.9799
offset_top = 0.0799561
offset_right = -29.9801
offset_bottom = 0.279968
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 8

[node name="ResumeButton" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Reiniciar"

[node name="ExitButton" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Sair"

[node name="Music" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="GridContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="GridContainer/ExitButton" to="." method="_on_exit_button_pressed"]
